--- a/vignettes/EZtrack-overview.Rmd
+++ b/vignettes/EZtrack-overview.Rmd
@@ -21,7 +21,7 @@ This vignette demonstrates a full workflow using ezTrack. It imports tracking da
 
 ## 1. Simulate Tracking Data with Irregular Format
 
-We simulate a small tracking dataset and pass the dataset to `ez_track()`. If column names aren't provided, `ez_track()` will automatically attempt to guess which columns correspond to ID, timestamp, longitude, and latitude..
+We simulate a small tracking dataset and pass the dataset to `ez_track()`. If column names aren't provided, `ez_track()` will automatically attempt to guess which columns correspond to ID, timestamp, longitude, and latitude.
 
 ```{r}
 set.seed(123)
@@ -33,7 +33,7 @@ sample_data <- data.frame(
   animal = rep(paste0("Animal_", LETTERS[1:n_individuals]), each = n_points),
   date = rep(seq.POSIXt(
     from = as.POSIXct("2023-01-01 08:00"),
-    by = "6 hours",
+    by = "24 hours",
     length.out = n_points), n_individuals),
   location_long = runif(n_individuals * n_points, 5.5, 7),
   location_lat = runif(n_individuals * n_points, 52, 53.5)
@@ -51,7 +51,7 @@ head(tracks)
 ```
 
 
-## 3. Manually Specifying Column Names
+## 2. Manually Specifying Column Names
 
 If automatic column guessing fails or guesses incorrectly, you can manually specify which columns represent the ID, timestamp, longitude, and latitude.
 
@@ -76,21 +76,39 @@ manual_cleaned <- ez_track(
 
 head(manual_cleaned)
 ```
-## 4. Summarize the Tracking Data
+## 3. Summarize the Tracking Data
 
-We compute summary statistics for each individual using `ez_summary()`.
+Summary statistics can be computed for each individual using `ez_summary()`. For easy use in reports or presentations, HTML reports can be generated using `report = TRUE`. Summaries can also be filtered by date using the `startDate` and `endDate` arguments.
+
+The following summary statistics are returned for each unique id:
+
+- n_fixes: Number of location records  
+- first_location: Timestamp of the first recorded location  
+- last_location: Timestamp of the last recorded location  
+- tracking_duration_days: Duration between first and last fix (in days)  
+- fixes_per_day: Average number of fixes per day  
+- median_interval_hours: Median interval between fixes (in hours)  
+- max_time_gap_days: Longest time gap between consecutive fixes (in days)  
+- distance_km: Total distance traveled (in kilometers), calculated using the Haversine formula  
+- avg_speed_kmh: Average speed (km/h), computed as distance divided by tracking duration in hours  
+
 
 ```{r}
 summary_table <- ez_summary(tracks)
 summary_table
 ```
 
-## 5. Visualize the Tracks on an Interactive Map
+## 4. Visualize the Tracks on an Interactive Map
 
-We display the movement tracks using an interactive Leaflet map with `ez_map()`.
+We can display the movement tracks using an interactive Leaflet map with `ez_map()` with a simple command.
 
 ```{r}
 ez_map(tracks)
+```
+
+
+Or with additional visualization arguments.
+```{r}
 ez_map(tracks, plotPath = TRUE,
   plotPoints = TRUE,
   pointRadius = 2,
@@ -103,5 +121,31 @@ ez_map(tracks, plotPath = TRUE,
   pathOpacity = 0.5,
   showLabels = TRUE)
 
+```
+As well as with date range filters.
+```{r}
+ez_map(tracks,
+  startDate = "2023-01-01",
+  endDate = "2023-01-10")
+
+```
+## 5. Estimate Home Ranges
+
+You can estimate simple home ranges using Minimum Convex Polygons (MCPs) or Kernel Density Estimates (KDEs) per individual or population. This returns a spatial object with 95% Minimum Convex Polygons (MCPs) calculated for each individual or population.
+
+
+```{r}
+home_ranges_mcp <- ez_home_range(tracks, method = 'mcp', population = TRUE)
+home_ranges_kde <- ez_home_range(tracks, method = 'kde')
+
+```
+
+The result is an `sf` object containing one polygon per tracked individual or population.
+
+You can visualize the home ranges with `ez_map`:
+
+```{r}
+ez_map(home_ranges_mcp)
+ez_map(home_ranges_kde, homeRangeColor = 'id')
 ```
 
