--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -23,6 +23,8 @@ This vignette demonstrates a full workflow using ezTrack. It imports tracking da
 
 We simulate a small tracking dataset and pass the dataset to `ez_track()`. If column names aren't provided, `ez_track()` will automatically attempt to guess which columns correspond to ID, timestamp, longitude, and latitude.
 
+If automatic column guessing fails or guesses incorrectly, you can manually specify which columns represent the ID, timestamp, longitude, and latitude.
+
 ```{r}
 set.seed(123)
 
@@ -46,37 +48,17 @@ tracks <- ez_track(
   as_sf = TRUE
 )
 
-head(tracks)
-
+tracks_manual <- ez_track(
+  data = sample_data,
+  as_sf = TRUE,
+  id_col = 'animal',
+  time_col = 'date',
+  x_col = 'location_long',
+  y_col = 'location_lat',
+)
 ```
 
-
-## 2. Manually Specifying Column Names
-
-If automatic column guessing fails or guesses incorrectly, you can manually specify which columns represent the ID, timestamp, longitude, and latitude.
-
-```{r}
-# Create intentionally confusing column names
-messy_data <- data.frame(
-  uid = rep(c("X1", "X2"), each = 4),
-  date_obs = rep(seq.POSIXt(as.POSIXct("2023-03-01 06:00"), by = "3 hours", length.out = 4), 2),
-  lon_deg = runif(8, -100, -90),
-  lat_deg = runif(8, 40, 45)
-)
-
-head(messy_data)
-
-manual_cleaned <- ez_track(
-  data = messy_data,
-  id_col = "uid",
-  time_col = "date_obs",
-  x_col = "lon_deg",
-  y_col = "lat_deg"
-)
-
-head(manual_cleaned)
-```
-## 3. Summarize the Tracking Data
+## 2. Summarize the Tracking Data
 
 Summary statistics can be computed for each individual using `ez_summary()`. For easy use in reports or presentations, HTML reports can be generated using `report = TRUE`. Summaries can also be filtered by date using the `startDate` and `endDate` arguments.
 
@@ -98,7 +80,7 @@ summary_table <- ez_summary(tracks)
 summary_table
 ```
 
-## 4. Visualize the Tracks on an Interactive Map
+## 3. Visualize the Tracks on an Interactive Map
 
 We can display the movement tracks using an interactive Leaflet map with `ez_map()` with a simple command.
 
@@ -129,7 +111,7 @@ ez_map(tracks,
   endDate = "2023-01-10")
 
 ```
-## 5. Estimate Home Ranges
+## 4. Estimate Home Ranges
 
 You can estimate simple home ranges using Minimum Convex Polygons (MCPs) or Kernel Density Estimates (KDEs) per individual or population. This returns a spatial object with 95% Minimum Convex Polygons (MCPs) calculated for each individual or population.
 
