--- a/vignettes/getting-started.Rmd
+++ b/vignettes/getting-started.Rmd
@@ -22,9 +22,9 @@ library(ezTrack)
 
 This vignette demonstrates a full workflow using ezTrack. It imports tracking data with non-standard column names, cleans, standardizes, and (optionally) converts it to a Spatial Feature, computes a summary table of the tracking data, and plots the tracks and home ranges on an interactive map.
 
-## 1. Simulate Tracking Data with Irregular Format
+## 1. Format Tracking Data
 
-We simulate a small tracking dataset and pass the dataset to `ez_track()`. If column names aren't provided, `ez_track()` will automatically attempt to guess which columns correspond to ID, timestamp, longitude, and latitude.
+We pass a simulated sample dataset to `ez_track()`. If column names aren't provided, `ez_track()` will automatically attempt to guess which columns correspond to ID, timestamp, longitude, and latitude.
 
 If automatic column guessing fails or guesses incorrectly, you can manually specify which columns represent the ID, timestamp, longitude, and latitude.
 
@@ -47,7 +47,7 @@ tracks_manual <- ez_track(
 )
 ```
 
-## 2. Summarize the Tracking Data
+## 2. Tracking Data Summary Reports
 
 Summary statistics can be computed for each individual using `ez_summary()`. For easy use in reports or presentations, HTML reports can be generated using `report = TRUE`. Summaries can also be filtered by date using the `startDate` and `endDate` arguments.
 
@@ -68,7 +68,7 @@ summary_table <- ez_summary(tracks)
 summary_table
 ```
 
-## 3. Visualize the Tracks on an Interactive Map
+## 3. Visualize Tracks on an Interactive Map
 
 We can display the movement tracks using an interactive Leaflet map with `ez_map()` with a simple command.
 
@@ -120,7 +120,7 @@ Home ranges can be vizualised with `ez_map`:
 ez_map(home_ranges_mcp)
 ez_map(home_ranges_kde, homeRangeColor = 'id')
 ```
-## 5. Visualizing Latitude Over Time
+## 5. Visualize Latitude Over Time
 
 `ez_latitude_plot()` can be used to visualize latitudinal movement (north-south) over time for each tracked animal. The plot supports:
 
